--- a/config-root/environments/preprod/preprod-cluster/kustomization.yaml
+++ b/config-root/environments/preprod/preprod-cluster/kustomization.yaml
@@ -17,4 +17,4 @@ patches:
   patch: |-
     - op: replace
       path: /spec/googleServiceAccount
-      value: cnrmsa-preprod-cluster@johnwhitaker-project-00cb323d.iam.gserviceaccount.com
+      value: cnrmsa-preprod-cluster@PROJECT-INSERT.iam.gserviceaccount.com
