--- a/deploy/prod/prod-cluster-ny/manifest.yaml
+++ b/deploy/prod/prod-cluster-ny/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: johnwhitaker-project-00cb323d
+    cnrm.cloud.google.com/project-id: PROJECT-INSERT
   labels:
     geo: uk
     test: replace
@@ -12,7 +12,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: johnwhitaker-project-00cb323d
+    cnrm.cloud.google.com/project-id: PROJECT-INSERT
   labels:
     geo: uk
     test: replace
